package com.pda.distributed.core;

/** Enumerado de tipos de anillo, A (para líderes)
 * B (para trabajadores)
 */
public enum RingType {
    RING_A,
    RING_B,
    NONE
}